--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -186,8 +186,8 @@
 		<dict>
 			<key>PciRoot(0x0)/Pci(0x1b,0x0)</key>
 			<dict>
-				<key>alc-layout-id</key>
-				<data>AQAAAA==</data>
+				<key>layout-id</key>
+				<data>DwAAAA==</data>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
@@ -409,38 +409,6 @@
 				<key>PlistPath</key>
 				<string>Contents/Info.plist</string>
 			</dict>
-			<dict>
-				<key>Comment</key>
-				<string></string>
-				<key>MaxKernel</key>
-				<string></string>
-				<key>PlistPath</key>
-				<string>Contents/Info.plist</string>
-				<key>Enabled</key>
-				<true/>
-				<key>MinKernel</key>
-				<string></string>
-				<key>ExecutablePath</key>
-				<string>Contents/MacOS/CPUFriend</string>
-				<key>BundlePath</key>
-				<string>CPUFriend.kext</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string></string>
-				<key>MaxKernel</key>
-				<string></string>
-				<key>PlistPath</key>
-				<string>Contents/Info.plist</string>
-				<key>Enabled</key>
-				<true/>
-				<key>MinKernel</key>
-				<string></string>
-				<key>ExecutablePath</key>
-				<string></string>
-				<key>BundlePath</key>
-				<string>CPUFriendDataProvider.kext</string>
-			</dict>			
 		</array>
 		<key>Block</key>
 		<array>
@@ -795,7 +763,7 @@
 			<key>AdviseWindows</key>
 			<false/>
 			<key>MLB</key>
-			<string>PUT YOUR OWN HERE</string>
+			<string>C02436403J9G2Y78C</string>
 			<key>ROM</key>
 			<data>AAAAAAA=</data>
 			<key>SpoofVendor</key>
@@ -803,9 +771,9 @@
 			<key>SystemProductName</key>
 			<string>iMac15,1</string>
 			<key>SystemSerialNumber</key>
-			<string>PUT YOUR OWN HERE</string>
+			<string>C02NCBZKFY10</string>
 			<key>SystemUUID</key>
-			<string>PUT YOUR OWN HERE</string>
+			<string>CF729423-07C4-446B-9DD5-AB0D1166D5B5</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
